# the_akkadian

./: .gitmodules  CMakeLists.txt  README.md  watchtower-alt1.service
include/: AkkadianEvents.hpp  AkkadianService.hpp  AkkadianUtils.hpp  ArucoDetector.hpp  BuoyCodeDetector.hpp  CameraHandler.hpp  Configuration.hpp  EastTextLocatorService.hpp  FrameHandler.hpp  GpioService.hpp  ImageWriter.hpp  Main.hpp  MainTest.hpp  Models.hpp  SerialService.hpp  TextLocatorService.hpp  WeatherVaneDetector.hpp
include/opencv2/: opencv_modules.hpp
src/: AkkadianService.cpp  CameraHandler.cpp  EastTextLocatorService.cpp  GpioService.cpp  ImageWriter.cpp  Main.cpp  MainTest.cpp  SerialService.cpp  TextLocatorService.cpp
